[package]
name = "i-cant-believe-its-not-bsn"
authors = ["Alice I. Cecile"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Leafwing-Studios/i-cant-believe-its-not-bsn"
description = "Tools for spawning entity hierarchies in Bevy"
tags = ["bevy", "ecs"]

[dependencies]
bevy_ecs = "0.14"
bevy_hierarchy = "0.14"
