[package]
name = "i-cant-believe-its-not-bsn"
authors = ["Alice I. Cecile"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Leafwing-Studios/i-cant-believe-its-not-bsn"
description = "Tools for spawning entity hierarchies in Bevy"
tags = ["bevy", "ecs"]

[dependencies]
bevy_ecs = { version = "0.14", default-features = false }
bevy_hierarchy = { version = "0.14", default-features = false }
